--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </ul>
     </nav>
     <section id="Home">
-      <div>
+      <div id="text">
         <h1>
           Make you Startup web <br />
           with our template,
@@ -38,8 +38,16 @@
         <input type="butten" value="Get the App" />
       </div>
       <div>
-        <img src="./img/phone_001.png" alt="white i-phone with open app" />
-        <img src="./img/phone_002.png" alt="black i-phone with open app" />
+        <img
+          id="white"
+          src="./img/phone_001.png"
+          alt="white i-phone with open app"
+        />
+        <img
+          id="black"
+          src="./img/phone_002.png"
+          alt="black i-phone with open app"
+        />
       </div>
     </section>
   </body>
