--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <li>
           <a href="#Home"><img src="./img/logo_001.png" alt="Logo" /></a>
         </li>
-        <li><a href="#">PRODUCS</a></li>
-        <li><a href="#">PRICES</a></li>
-        <li><a href="#">BLOG</a></li>
-        <li><a href="#">TEAM</a></li>
-        <li><a href="#">LOGIN</a></li>
-        <li><a href="#">SIGN UP</a></li>
+        <li><a href="#" class="links">PRODUCS</a></li>
+        <li><a href="#" class="links">PRICES</a></li>
+        <li><a href="#" class="links">BLOG</a></li>
+        <li><a href="#" class="links">TEAM</a></li>
+        <li><a href="#" class="links">LOGIN</a></li>
+        <li><a href="#" class="links">SIGN UP</a></li>
       </ul>
     </nav>
     <section id="Home">
