--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
           totam vel deleniti ad adipisci eum, iure animi error consequatur
           voluptates fuga voluptatibus neque maxime.
         </p>
-        <input type="butten" value="Learn More" />
-        <input type="butten" value="Get the App" />
+        <input type="butten" value="Learn More" id="More" />
+        <input type="butten" value="Get the App" id="App" />
       </div>
       <div>
         <img
