mobile-app grid

--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
   </head>
   <body>
     <nav>
-      <ul>
+      <ul class="nav">
         <li>
-          <a href="#Home"><img src="./img/logo_001.png" alt="Logo" /></a>
+          <img src="./img/logo_001.png" alt="Logo" class="logo" />
         </li>
-        <li><a href="#" class="links">PRODUCS</a></li>
-        <li><a href="#" class="links">PRICES</a></li>
-        <li><a href="#" class="links">BLOG</a></li>
-        <li><a href="#" class="links">TEAM</a></li>
-        <li><a href="#" class="links">LOGIN</a></li>
-        <li><a href="#" class="links">SIGN UP</a></li>
+        <li><a href="#">PRODUCS</a></li>
+        <li><a href="#">PRICES</a></li>
+        <li><a href="#">BLOG</a></li>
+        <li><a href="#">TEAM</a></li>
+        <li><a href="#">LOGIN</a></li>
+        <li><a href="#">SIGN UP</a></li>
       </ul>
     </nav>
-    <section id="Home">
-      <div id="text">
+    <div class="main">
+      <div>
         <h1>
           Make you Startup web <br />
           with our template,
@@ -34,21 +34,13 @@
           totam vel deleniti ad adipisci eum, iure animi error consequatur
           voluptates fuga voluptatibus neque maxime.
         </p>
-        <input type="butten" value="Learn More" id="More" />
-        <input type="butten" value="Get the App" id="App" />
+        <input type="butten" value="Learn More" />
+        <input type="butten" value="Get the App" />
       </div>
-      <div>
-        <img
-          id="white"
-          src="./img/phone_001.png"
-          alt="white i-phone with open app"
-        />
-        <img
-          id="black"
-          src="./img/phone_002.png"
-          alt="black i-phone with open app"
-        />
+      <div class="iphone">
+        <img src="./img/phone_001.png" alt="white i-phone with open app" />
+        <img src="./img/phone_002.png" alt="black i-phone with open app" />
       </div>
-    </section>
+    </div>
   </body>
 </html>
