mobile-app grid

--- a/index.html
+++ b/index.html
@@ -38,8 +38,16 @@
         <input type="butten" value="Get the App" />
       </div>
       <div class="iphone">
-        <img src="./img/phone_001.png" alt="white i-phone with open app" />
-        <img src="./img/phone_002.png" alt="black i-phone with open app" />
+        <img
+          src="./img/phone_001.png"
+          alt="white i-phone with open app"
+          class="white-phone"
+        />
+        <img
+          src="./img/phone_002.png"
+          alt="black i-phone with open app"
+          class="black-phone"
+        />
       </div>
     </div>
   </body>
