--- a/index.html
+++ b/index.html
@@ -8,26 +8,26 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <nav>
-      <ul class="nav">
-        <li>
-          <img src="./img/logo_001.png" alt="Logo" class="logo" />
-        </li>
-        <li><a href="#">PRODUCS</a></li>
-        <li><a href="#">PRICES</a></li>
-        <li><a href="#">BLOG</a></li>
-        <li><a href="#">TEAM</a></li>
-        <li><a href="#">LOGIN</a></li>
-        <li><a href="#">SIGN UP</a></li>
-      </ul>
-    </nav>
+    <div class="header">
+      <img src="./img/logo_001.png" alt="Logo" class="logo" />
+      <nav>
+        <ul class="nav">
+          <li><a href="#">PRODUCS</a></li>
+          <li><a href="#">PRICES</a></li>
+          <li><a href="#">BLOG</a></li>
+          <li><a href="#">TEAM</a></li>
+          <li><a href="#">LOGIN</a></li>
+          <li><a href="#">SIGN UP</a></li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="main">
       <div>
         <h1>
           Make you Startup web <br />
           with our template,
         </h1>
-
         <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum enim
           facere porro nesciunt sint fugit quam culpa numquam dolores. Labore
