--- a/index.html
+++ b/index.html
@@ -8,21 +8,23 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <nav>
-      <ul>
-        <li>
-          <a href="#Home"><img src="./img/logo_001.png" alt="Logo" /></a>
-        </li>
-        <li><a href="#" class="links">PRODUCS</a></li>
-        <li><a href="#" class="links">PRICES</a></li>
-        <li><a href="#" class="links">BLOG</a></li>
-        <li><a href="#" class="links">TEAM</a></li>
-        <li><a href="#" class="links">LOGIN</a></li>
-        <li><a href="#" class="links">SIGN UP</a></li>
-      </ul>
-    </nav>
-    <section id="Home">
-      <div id="text">
+    <section class="menu-top">
+      <div class="logo">
+        <a href="#"><img src="./img/logo_001.png" alt="Logo" /></a>
+      </div>
+      <nav class="main-menu">
+        <ul>
+          <li><a href="#" class="links">PRODUCS</a></li>
+          <li><a href="#" class="links">PRICES</a></li>
+          <li><a href="#" class="links">BLOG</a></li>
+          <li><a href="#" class="links">TEAM</a></li>
+          <li><a href="#" class="links">LOGIN</a></li>
+          <li><a href="#" class="links">SIGN UP</a></li>
+        </ul>
+      </nav>
+    </section>
+    <section class="Home">
+      <div class="text">
         <h1>
           Make you Startup web <br />
           with our template,
@@ -37,14 +39,14 @@
         <input type="butten" value="Learn More" id="More" />
         <input type="butten" value="Get the App" id="App" />
       </div>
-      <div>
+      <div class="iphone">
         <img
-          id="white"
+          class="white"
           src="./img/phone_001.png"
           alt="white i-phone with open app"
         />
         <img
-          id="black"
+          class="black"
           src="./img/phone_002.png"
           alt="black i-phone with open app"
         />
