--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>
       </nav>
     </section>
-    <section class="Home">
+    <section class="content">
       <div class="text">
         <h1>
           Make you Startup web <br />
@@ -36,8 +36,10 @@
           totam vel deleniti ad adipisci eum, iure animi error consequatur
           voluptates fuga voluptatibus neque maxime.
         </p>
-        <input type="butten" value="Learn More" id="More" />
-        <input type="butten" value="Get the App" id="App" />
+        <div class="button">
+          <input type="button" value="Learn More" class="More" />
+          <input type="button" value="Get the App" class="App" />
+        </div>
       </div>
       <div class="iphone">
         <img
