--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         console.log(clicked);
         if (clicked) {
           document.querySelector(".main-menu").style.cssText =
-            "display: block; position: absolute;z-index: 1;";
+            "display: block; width: 100%; height: 100%; position: absolute; top: 0; left: 0; z-index: 0;";
         } else {
           document.querySelector(".main-menu").style.cssText = "display: none;";
         }
