resposive -> mobile -> content

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
           voluptates fuga.
         </p>
         <div class="button">
-          <input type="button" value="Learn More" class="More" />
-          <input type="button" value="Get the App" class="App" />
+          <input type="button" value="Learn More" class="more" />
+          <input type="button" value="Get the App" class="app" />
         </div>
       </div>
       <div class="iphone">
