--- a/index.html
+++ b/index.html
@@ -63,10 +63,9 @@
       let clicked = false;
       document.querySelector(".hamburger").addEventListener("click", () => {
         clicked = !clicked;
-        console.log(clicked);
         if (clicked) {
           document.querySelector(".main-menu").style.cssText =
-            "display: block; width: 100%; height: 100%; position: absolute; top: 0; left: 0; z-index: 0;";
+            "display: block; width: 100%; height: 100%; position: absolute; top: 0; left: 0; z-index: 0; animation-name: menuOpen; animation-timing-function: linear; animation-iteration-count: 1; animation-duration: 0.35s;";
         } else {
           document.querySelector(".main-menu").style.cssText = "display: none;";
         }
