--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <a href="#"><img src="./img/logo_001.png" alt="Logo" /></a>
       </div>
       <div class="hamburger">
-        <div></div>
-        <div></div>
-        <div></div>
+        <div class="top"></div>
+        <div class="middle"></div>
+        <div class="bottom"></div>
       </div>
       <nav class="main-menu">
         <ul>
@@ -64,9 +64,12 @@
       document.querySelector(".hamburger").addEventListener("click", () => {
         clicked = !clicked;
         if (clicked) {
+          document.querySelector(".top").style.cssText =
+            "position: relative; transform: rotate(-0.47turn);";
           document.querySelector(".main-menu").style.cssText =
             "display: block; width: 100%; height: 100%; position: absolute; top: 0; left: 0; z-index: 0; animation-name: menuOpen; animation-timing-function: linear; animation-iteration-count: 1; animation-duration: 0.35s;";
         } else {
+          document.querySelector(".top").style.cssText = "position: static;";
           document.querySelector(".main-menu").style.cssText = "display: none;";
         }
       });
