--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Mobile App</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body>
+  <body class="body">
     <section class="menu-top">
       <div class="logo">
         <a href="#"><img src="./img/logo_001.png" alt="Logo" /></a>
@@ -64,11 +64,18 @@
       document.querySelector(".hamburger").addEventListener("click", () => {
         clicked = !clicked;
         if (clicked) {
+          document.querySelector(".white").style.cssText =
+            "height: 92vh; width: auto";
+          document.querySelector(".text").style.cssText = "display: none;";
+          document.querySelector(".black").style.cssText = "display: none;";
           document.querySelector(".top").style.cssText =
             "position: relative; transform: rotate(-0.47turn);";
           document.querySelector(".main-menu").style.cssText =
             "display: block; width: 100%; height: 100%; position: absolute; top: 0; left: 0; z-index: 0; animation-name: menuOpen; animation-timing-function: linear; animation-iteration-count: 1; animation-duration: 0.35s;";
         } else {
+          document.querySelector(".white").style.cssText = "height: auto;";
+          document.querySelector(".text").style.cssText = "display: flex;";
+          document.querySelector(".black").style.cssText = "display: block;";
           document.querySelector(".top").style.cssText = "position: static;";
           document.querySelector(".main-menu").style.cssText = "display: none;";
         }
