--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
       document.querySelector(".hamburger").addEventListener("click", () => {
         clicked = !clicked;
         if (clicked) {
-          document.querySelector(".white").style.cssText =
-            "height: 92vh; width: auto";
+          document.querySelector(".body").style.cssText = "height: 100vh;";
+          document.querySelector(".white").style.cssText = "display: none;";
           document.querySelector(".text").style.cssText = "display: none;";
           document.querySelector(".black").style.cssText = "display: none;";
           document.querySelector(".top").style.cssText =
@@ -73,7 +73,8 @@
           document.querySelector(".main-menu").style.cssText =
             "display: block; width: 100%; height: 100%; position: absolute; top: 0; left: 0; z-index: 0; animation-name: menuOpen; animation-timing-function: linear; animation-iteration-count: 1; animation-duration: 0.35s;";
         } else {
-          document.querySelector(".white").style.cssText = "height: auto;";
+          document.querySelector(".body").style.cssText = "height: auto;";
+          document.querySelector(".white").style.cssText = "display: block;";
           document.querySelector(".text").style.cssText = "display: flex;";
           document.querySelector(".black").style.cssText = "display: block;";
           document.querySelector(".top").style.cssText = "position: static;";
